# sine-segment-osc

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
apps/standalone/: CMakeLists.txt
apps/standalone/src/: CMakeLists.txt  main.cpp
core/: ADEnvelope.h  ASREnvelope.h  Audio.h  CMakeLists.txt  Midi.h  Oscillator.h  Synth.h  doctest.h
core/src/: ADEnvelope.cpp  ASREnvelope.cpp  CMakeLists.txt  Oscillator.cpp  Synth.cpp
core/tests/: tests.cpp
py/: ui.py  ui_david.py
py/ui/: ui_intensity_v7.py
py/ui/Combinations/: basic_ui_intensity.csv
py/ui/Presets/: bass_ui_intensity_v6.csv  dreieck_ui_intensity_v6.csv  kirchenorgel_ui_intensity_v6.csv  long_shot_saw_ui_intensity_v6.csv  nice_ui_intensity_v6.csv  orgel_ui_intensity_v6.csv
py/ui_intensity/: ui_intensity.py
py/ui_intensity_xfader/: ui_intensity_v2.py
py/ui_intensity_xfader/Presets/: pulse_ui_intensity.csv  saw_ui_intensity.csv
py/ui_intensity_xfader_changeable/: ui_intensity_v3.py
py/ui_intensity_xfader_changeable/Presets/: sine_ui_intensity.csv  stairs_ui_intensity.csv
