file(GLOB_RECURSE ${PROJECT_NAME}_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*)
file(GLOB_RECURSE ${PROJECT_NAME}_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../*.h)

add_library(${PROJECT_NAME} ${${PROJECT_NAME}_FILES} ${${PROJECT_NAME}_HEADER_FILES})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
